--- a/src/app/m-trabajo-bitacora/componentes/editar-verificacion-produccion/editar-verificacion-produccion.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/editar-verificacion-produccion/editar-verificacion-produccion.component.html
@@ -369,6 +369,7 @@
        
       <button pButton type="button" label="Guardar" class="ui-button-success" (click)="guardar()">
       </button>
+      &nbsp;&nbsp;
     <button pButton type="button" label="Volver" class="ui-button-warning" (click)="volver()">
     </button>
   </div>
