--- a/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
+++ b/src/app/m-trabajo-bitacora/componentes/buscar-portafolio-bitacora/buscar-portafolio-bitacora.component.html
@@ -1,6 +1,9 @@
-<p-fieldset legend="Busqueda de portafolio trabajo en Bitacora" [toggleable]="true">
+<p-fieldset legend="Busqueda de portafolio trabajo para Informes de Verificación" [toggleable]="true">
 
-  <div class="row">
+
+  <hr>
+
+  <div class="row" (keyup.enter)="buscarPortafolio()">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
@@ -11,38 +14,18 @@
         </div>
       </div>
     </div>
-
-  </div>
-
-  <div class="row">
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
-          <label for="campo"><b>Campo:*</b></label>
+          <label for="campo"><b>Funcionario:</b></label>
         </div>
         <div class="col-md">
-          <p-dropdown [options]="campoList" [(ngModel)]="campo" (onChange)="cargarPozosByCamCodigo(campo);"
-            [filter]="true">
-          </p-dropdown>
+          <input [(ngModel)]="busquedaParametros.funcionario" pInputText />
         </div>
       </div>
     </div>
 
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-4">
-          <label for="campo"><b>Pozo:*</b></label>
-        </div>
-        <div class="col-md">
-          <p-dropdown [options]="pozoList" [(ngModel)]="pozo" [filter]="true">
-          </p-dropdown>
-        </div>
-      </div>
-    </div>
-
-
   </div>
-
   <div class="row">
     <div class="col-md-6">
       <div class="row">
@@ -75,65 +58,66 @@
     <div class="col-md-6">
       <div class="row">
         <div class="col-md-4">
-          <label for="campo"><b>Funcionario:</b></label>
+          <label for="campo"><b>Campo:*</b></label>
         </div>
         <div class="col-md">
-          <input [(ngModel)]="busquedaParametros.funcionario" pInputText />
+          <p-dropdown [options]="campoList" [(ngModel)]="campo" (onChange)="getPozoListByCamCodigo(campo);"
+            [filter]="true">
+          </p-dropdown>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-4">
+          <label for="campo"><b>Pozo:*</b></label>
+        </div>
+        <div class="col-md">
+          <p-dropdown [options]="pozoList" [(ngModel)]="pozo" [filter]="true">
+          </p-dropdown>
         </div>
       </div>
     </div>
 
+
   </div>
-  <div class="row justify-content-end">
-    <div class="col-md-4">
-      <button type="button" class="button" (click)="buscarPortafolio()">
+</p-fieldset>
+
+
+
+<div class="row justify-content-end">
+    <div class="col-md-4"> 
+        <br>
+      <button type="button" class="btn btn-sm btn-info btn-block" (click)="buscarPortafolio()">
         Buscar
       </button>
     </div>
   </div>
 
-</p-fieldset>
-<hr>
-
+<br>
 <p-fieldset legend="Resultados" [toggleable]="true">
 
   <div class="row">
     <div class="col-md-12">
       <ul class="nav justify-content-end">
         <li>
-          <i class="fa fa-pencil-square-o" aria-hidden="true"> Crear Informe Operadora</i>
+          <i class="fa fa-pencil-square-o" aria-hidden="true"> Crear Informe de Operadora</i>
+        </li>
+        <li *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'">
+          <i class="fa fa-calendar-o" aria-hidden="true" > Crear Informe de Verificación de Fechas</i>
         </li>
         <li>
-          <i class="fa fa-calendar-o" aria-hidden="true"> Verificar Fechas</i>
+          <i class="fa fa-newspaper-o" aria-hidden="true"> Crear Informe de Verificación de Novedad</i>
         </li>
         <li>
-          <i class="fa fa-newspaper-o" aria-hidden="true"> Verificar Novedad</i>
+          <i class="fa fa-bar-chart" aria-hidden="true"> Crear Informe de Verificación de Producción </i>
         </li>
-        <li>
-          <i class="fa fa-briefcase" aria-hidden="true"> Verificar Producción</i>
-        </li>
-        <li>
-          <i class="fa fa-superpowers" aria-hidden="true"> Verificar Tasa</i>
-        </li>
-
-        <li>
-          <i class="fa fa-info" aria-hidden="true"> Verificar Inyector</i>
-        </li>
-
-        <li>
-          <i class=" fa fa-cogs" aria-hidden="true"> Verificar Reinyector</i>
-        </li>
-
-        <li>
-          <i class=" fa fa-text-height" aria-hidden="true"> Verificar Trabajo</i>
-        </li>
-
       </ul>
     </div>
   </div>
-  <br>
+  <hr>
 
-
+ 
   <div class="row">
     <div class="col-md-12">
       <table class="table table-bordered table-sm">
@@ -170,7 +154,7 @@
                       <i class="fa fa-pencil fa-2x"></i>
                     </li>
 
-                    <li (click)="verificarFechas(portafolio);">
+                    <li *ngIf="usuario && usuario.perfil && usuario.perfil.codigoPerfil == '21'" (click)="verificarFechas(portafolio);">
                       <i class="fa fa-calendar-o fa-2x"></i>
                     </li>
 
@@ -178,24 +162,9 @@
                       <i class="fa fa-newspaper-o fa-2x"></i>
                     </li>
                     <li (click)="verificarProduccion(portafolio);">
-                      <i class="fa fa-briefcase fa-2x"></i>
+                      <i class="fa fa-bar-chart fa-2x"></i>
                     </li>
 
-                    <li (click)="verificarTasa(portafolio);">
-                      <i class="fa fa-superpowers fa-2x"></i>
-                    </li>
-
-                    <li (click)="verificarInyector(portafolio);">
-                      <i class="fa fa-info fa-2x"></i>
-                    </li>
-
-                    <li (click)="verificarReinyector(portafolio);">
-                      <i class=" fa fa-cogs fa-2x"></i>
-                    </li>
-
-                    <li (click)="verificarTrabajo(portafolio)">
-                      <i class="fa fa-text-height  fa-2x"></i>
-                    </li>
                   </ul>
                 </div>
               </div>
@@ -216,6 +185,8 @@
     </div>
   </div>
 </p-fieldset>
+
+
 
 <ng-template #customLoadingTemplate> </ng-template>
 <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate">
