--- a/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
+++ b/src/app/m-trabajo-pozo/componentes/documento-operadora/documento-operadora.component.html
@@ -136,12 +136,25 @@
               <td>{{doc.numeroOficio}} </td>
               <td>
                 <ul>
-                  <li *ngIf="doc.urlOficio">{{doc.urlOficio}}</li>
-                  <li *ngIf="doc.urlAnexo1">{{doc.urlAnexo1}}</li>
-                  <li *ngIf="doc.urlAnexo2">{{doc.urlAnexo2}}</li>
-                  <li *ngIf="doc.urlAnexo3">{{doc.urlAnexo3}}</li>
-                  <li *ngIf="doc.urlAnexo4">{{doc.urlAnexo4}}</li>
-                  <li *ngIf="doc.urlPagos">{{doc.urlPagos}}</li>
+
+                  <li *ngIf="doc.urlOficio" (click)="showPdf(doc.fileOficio.base64, doc.fileOficio.nombre)">OFICIO:
+                    {{doc.fileOficio.nombre}}
+                  </li>
+                  <li *ngIf="doc.urlAnexo1" (click)="showPdf(doc.fileAnexo1.base64, doc.fileAnexo1.nombre)">ANEXO:
+                    {{doc.fileAnexo1.nombre}}
+                  </li>
+                  <li *ngIf="doc.urlAnexo2" (click)="showPdf(doc.fileAnexo2.base64, doc.fileAnexo2.nombre)">ANEXO:
+                    {{doc.fileAnexo2.nombre}}
+                  </li>
+                  <li *ngIf="doc.urlAnexo3" (click)="showPdf(doc.fileAnexo3.base64, doc.fileAnexo3.nombre)">ANEXO:
+                    {{doc.fileAnexo3.nombre}}
+                  </li>
+                  <li *ngIf="doc.urlAnexo4" (click)="showPdf(doc.fileAnexo4.base64, doc.fileAnexo4.nombre)">ANEXO:
+                    {{doc.fileAnexo4.nombre}}
+                  </li>
+                  <li *ngIf="doc.urlPagos" (click)="showPdf(doc.filePago.base64 ,doc.filePago.nombre)">PAGO:
+                    {{doc.filePago.nombre}}</li>
+
                 </ul>
               </td>
               <td>{{doc.fechaOficio  | date:'dd/MM/yyyy'}} </td>
@@ -153,11 +166,13 @@
                 <div class="row">
                   <div class="col-md-12">
                     <ul class="nav">
-                      <li *ngIf="doc.codigoAsunto == 1 || doc.codigoAsunto == 2 || doc.codigoAsunto == 3 || doc.codigoAsunto == 4"
+                      <li
+                        *ngIf="doc.codigoAsunto == 1 || doc.codigoAsunto == 2 || doc.codigoAsunto == 3 || doc.codigoAsunto == 4"
                         (click)="openModalPagos(pagosTemplate, doc.codigoDocumentoOperadora)"><i
                           class="fa fa-usd fa-2x"></i>
                       </li>
-                      <li *ngIf="doc.codigoAsunto == 1 || doc.codigoAsunto == 2 || doc.codigoAsunto == 3 || doc.codigoAsunto == 4"
+                      <li
+                        *ngIf="doc.codigoAsunto == 1 || doc.codigoAsunto == 2 || doc.codigoAsunto == 3 || doc.codigoAsunto == 4"
                         (click)="openModalPagosList(pagoListTemplate, doc.codigoDocumentoOperadora)"><i
                           class="fa fa-list-ol fa-2x"></i>
                       </li>
